# backend/internal/domain/interfaces/users.go
@@ -11,6 +11,7 @@ import (
 type UsersRepo interface {
 	CreateUser(ctx context.Context, params models.CreateUserParams) error
 	GetUserById(ctx context.Context, id uuid.UUID) (models.User, error)
+	GetUserByUsername(ctx context.Context, username string) (models.User, error)
 	GetUserByUsernameOrEmail(ctx context.Context, identifier string) (models.User, error)
 	ListUsers(ctx context.Context, filter models.UsersListFilter) (models.UsersList, error)
 	UpdateUser(ctx context.Context, params models.UpdateUserParams) error
@@ -20,6 +21,7 @@ type UsersRepo interface {
 type UsersUC interface {
 	CreateUser(ctx context.Context, input models.CreateUserInput) (uuid.UUID, error)
 	GetUserById(ctx context.Context, id uuid.UUID) (models.User, error)
+	GetUserByUsername(ctx context.Context, username string) (models.User, error)
 	ListUsers(ctx context.Context, filter models.UsersListFilter) (models.UsersList, error)
 	UpdateUser(ctx context.Context, input models.UpdateUserInput) error
 }
